Invoice wrapping fix. Logos are really killing a ton of space. [Fixes #73059062]

--- a/app/assets/stylesheets/invoices.css.scss
+++ b/app/assets/stylesheets/invoices.css.scss
@@ -10,6 +10,7 @@
     border: solid 1px #b0b0b0;
     @include border-radius(3px);
     @include gradient(rgba(0,0,0,0), rgba(0,0,0,0.2));
+    margin-bottom: .5em;
     color: #fff;
     background-color: #43639F;
     font-family: inherit;
@@ -64,15 +65,10 @@
     padding-right: 0;
   }
   .column--three-fourths { width: 75%; }
+  .column--two-thirds { width: 66%; }
   .column--half { width: 50%; }
+  .column--third { width: 33%; }
   .column--fourth { width: 25%; }
-
-  .column--half-plus {
-    min-width: 50%;
-  }
-    .column--half-plus + .column {
-      margin-left: 2em;
-    }
 
   .ar { text-align: right; }
   .al { text-align: left; }
@@ -152,6 +148,7 @@
     font-weight: bold;
   }
   .due-date{
+    clear: right;
     padding: 17px;
     border: solid 2px #C7C7C7;
     background: #f9f9f9;
@@ -163,8 +160,10 @@
   .invoice-basics {
     margin-bottom: 1em;
   }
+  .invoice-parties {
+    margin-bottom: 1em;
+  }
   .logo {
-    float: left;
     max-width: 200px;
     margin-right: 15px;
     margin-bottom: 15px;
